@@ -1,5 +1,9 @@
 2000-12-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* getaddrinfo.c (getaddrinfo): fix mapping of HOST_NOT_FOUND
+	error.
+	(gai_strerror): fix capitalization of error strings.
+
 	* getaddrinfo.c (getaddrinfo): fix bug (ai allocation at wrong
 	time) found by OSF/1 cc.
 
